	- xgettext-perl does not yet support __*p* introduced by Log::Report
	  version 1.22.  It should probably accept variables as $msgctxt
	  argument, to make code maintainable.

wishlist:
	- let xgettext-perl produce mo files as well.

version 1.13:

	Changes:
	- move Log::Report::Extract::Template to Log::Report::Template::Extract.pm
	  in distribution Log-Report-Template.

version 1.12: Fri 18 Apr 17:10:11 CEST 2025

	Fixes:
	- binmode for POTcompact
	- confusion between option name 'lexicon' or 'lexicons', accept both.
	- find gmo files.
	- no translations for the declaration of the conversion routines in Log::Report

	Improvements:
	- add .gitignore
	- add translation table
	- extract Template understand FILTER

version 1.11: Thu Mar 22 23:32:11 CET 2018

	Release 1.10 seems to got lost on CPAN.  Upload a new one.

	Fixes:
	- fix metadata [Mohammad S Anwar]
	- $fh->binmode not supported before 5.12 [cpantesters]

version 1.10: Tue Jan 23 23:03:57 CET 2018

	Improvements:
	- typo, rt.cpan.org#123008 [Lukas Mai]
	- additional filename test in 30index.t
	- add debugging of fn0 to t/30index.t
	- convert to GIT
	- publish on GitHUB

version 1.09: Mon 28 Aug 10:37:30 CEST 2017

	Fixes:
	- support PO-table charsets only available in the file's header
	  Reported by [Lars Dɪᴇᴄᴋᴏᴡ]

	Improvements:
	- do not require Plural-Forms in the header when it is not used.
	- remove option Log::Report::Lexicon::MOTcompact::read(take_all)
	  Always take all, don't be smart (because it wasn't efficient at all)
	- support filename extension .gmo as alternative to .mo
	- ::Lexicon::POT::new(charset) from required to default 'UTF-8'

version 1.08: Thu 29 Jun 15:02:15 CEST 2017

	Fixes:
	- textdomain() from package.

version 1.07: Tue 27 Jun 16:43:28 CEST 2017

	Changes:
	- interpolated context values require "_context." prefix

	Fixes:
	- Accept END with blanks around it in piped syntax.

	Improvements:
	- spell-fix rt.cpan.org#118560 [Gregor Herrmann, Debian]