@@ -22,6 +22,9 @@ version 1.13:
 	- move Log::Report::Extract::Template to Log::Report::Template::Extract.pm
 	  in distribution Log-Report-Template.
 
+	Improvements:
+	- ::Extract::write() passes options to ::Lexicon writers.
+
 version 1.12: Fri 18 Apr 17:10:11 CEST 2025
 
 	Fixes:
